--- a/output/index.html
+++ b/output/index.html
@@ -4,7 +4,7 @@
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link rel="stylesheet" type="text/css" href="http://s6.qhimg.com/static/59489ca0e3d5df8b/index.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="http://s7.qhimg.com/static/f87da901feefef49/index.css" media="screen">
 
     <title>mv project</title>
 </head>
@@ -12,129 +12,64 @@
 <body>
     <header>
     <div class="inner">
-        <h1>mv project</h1>
+        <h1 class="sitename"><a href="index.html">mv project</a></h1>
         <h2>webpack developer platform for web font-end</h2>
         <a href="https://github.com/openjavascript/mv.docs" class="button"><small>View project on</small> GitHub</a>
     </div>
-    </header>
+    <nav class="sitenav">
+        <a href="index.html">首页</a>
+        <a href="docs.html">文档</a>
+    </nav>
+</header>
+
 
     <div id="content-wrapper">
         <div class="inner clearfix">
+
             
-            <dl class="clearfix cat">
-                <dt><label>项目方案</label></dt>
-                <dd class="">
-                    <dl class="clearfix cat_item">
-                        <dd>
-                            <a href="#"><img src="http://p0.qhimg.com/t0145cc635c85e0cd67.jpg" width="100%"></a>
-                            <a href="">item name</a>
-                        </dd>
-                        <dd>
-                            <a href="#"><img src="http://p0.qhimg.com/t0145cc635c85e0cd67.jpg" width="100%"></a>
-                            <a href="">item name</a>
-                        </dd>
-                        <dd>
-                            <a href="#"><img src="http://p0.qhimg.com/t0145cc635c85e0cd67.jpg" width="100%"></a>
-                            <a href="">item name</a>
-                        </dd>
-                        <dd>
-                            <a href="#"><img src="http://p0.qhimg.com/t0145cc635c85e0cd67.jpg" width="100%"></a>
-                            <a href="">item name</a>
-                        </dd>
-                        <dd>
-                            <a href="#"><img src="http://p0.qhimg.com/t0145cc635c85e0cd67.jpg" width="100%"></a>
-                            <a href="">item name</a>
-                        </dd>
-                    </dl>
-                </dd>
-            </dl>
+<!--            <dl class="clearfix cat">-->
+                <!--<dt><label>项目方案</label></dt>-->
+                <!--<dd class="">-->
+                    <!--<dl class="clearfix cat_item">-->
+                        <!--<dd>-->
+                            <!--<a href="#"><img src="./static/img/default_item.jpg" width="100%" /></a>-->
+                            <!--<a href="">默认</a>-->
+                        <!--</dd>-->
+                        <!--<dd>-->
+                            <!--<a href="#"><img src="./static/img/default_item.jpg" width="100%" /></a>-->
+                            <!--<a href="">动态模板</a>-->
+                        <!--</dd>-->
+                        <!--<dd>-->
+                            <!--<a href="#"><img src="./static/img/default_item.jpg" width="100%" /></a>-->
+                            <!--<a href="">动态模板 + React</a>-->
+                        <!--</dd>-->
+                        <!--<dd>-->
+                            <!--<a href="#"><img src="./static/img/default_item.jpg" width="100%" /></a>-->
+                            <!--<a href="">动态模板 + less</a>-->
+                        <!--</dd>-->
+                        <!--<dd>-->
+                            <!--<a href="#"><img src="./static/img/default_item.jpg" width="100%" /></a>-->
+                            <!--<a href="">动态模板 + React + less</a>-->
+                        <!--</dd>-->
+                    <!--</dl>-->
+                <!--</dd>-->
+            <!--</dl>-->
 
-            <dl class="clearfix cat">
-                <dt><label>项目配置</label</dt>
-                <dd>
-                    <dl class="clearfix cat_item">
-                        <dd>
-                            <a href="#"><img src="http://p0.qhimg.com/t0145cc635c85e0cd67.jpg" width="100%"></a>
-                            <a href="">item name</a>
-                        </dd>
-                        <dd>
-                            <a href="#"><img src="http://p0.qhimg.com/t0145cc635c85e0cd67.jpg" width="100%"></a>
-                            <a href="">item name</a>
-                        </dd>
-                        <dd>
-                            <a href="#"><img src="http://p0.qhimg.com/t0145cc635c85e0cd67.jpg" width="100%"></a>
-                            <a href="">item name</a>
-                        </dd>
-                        <dd>
-                            <a href="#"><img src="http://p0.qhimg.com/t0145cc635c85e0cd67.jpg" width="100%"></a>
-                            <a href="">item name</a>
-                        </dd>
-                        <dd>
-                            <a href="#"><img src="http://p0.qhimg.com/t0145cc635c85e0cd67.jpg" width="100%"></a>
-                            <a href="">item name</a>
-                        </dd>
-                    </dl>
-                </dd>
-            </dl>
-
-            <dl class="clearfix cat">
-                <dt><label>webpack 系统组件</label></dt>
-                <dd>
-                    <dl class="clearfix cat_item">
-                        <dd>
-                            <a href="#"><img src="http://p0.qhimg.com/t0145cc635c85e0cd67.jpg" width="100%"></a>
-                            <a href="">item name</a>
-                        </dd>
-                        <dd>
-                            <a href="#"><img src="http://p0.qhimg.com/t0145cc635c85e0cd67.jpg" width="100%"></a>
-                            <a href="">item name</a>
-                        </dd>
-                        <dd>
-                            <a href="#"><img src="http://p0.qhimg.com/t0145cc635c85e0cd67.jpg" width="100%"></a>
-                            <a href="">item name</a>
-                        </dd>
-                        <dd>
-                            <a href="#"><img src="http://p0.qhimg.com/t0145cc635c85e0cd67.jpg" width="100%"></a>
-                            <a href="">item name</a>
-                        </dd>
-                        <dd>
-                            <a href="#"><img src="http://p0.qhimg.com/t0145cc635c85e0cd67.jpg" width="100%"></a>
-                            <a href="">item name</a>
-                        </dd>
-                    </dl>
-                </dd>
-            </dl>
-
-            <dl class="cat">
-                <dt><label>webpack 应用组件</label></dt>
-                <dd>
-                    <dl class="clearfix cat_item">
-                        <dd>
-                            <a href="#"><img src="http://p0.qhimg.com/t0145cc635c85e0cd67.jpg" width="100%"></a>
-                            <a href="">item name</a>
-                        </dd>
-                        <dd>
-                            <a href="#"><img src="http://p0.qhimg.com/t0145cc635c85e0cd67.jpg" width="100%"></a>
-                            <a href="">item name</a>
-                        </dd>
-                        <dd>
-                            <a href="#"><img src="http://p0.qhimg.com/t0145cc635c85e0cd67.jpg" width="100%"></a>
-                            <a href="">item name</a>
-                        </dd>
-                        <dd>
-                            <a href="#"><img src="http://p0.qhimg.com/t0145cc635c85e0cd67.jpg" width="100%"></a>
-                            <a href="">item name</a>
-                        </dd>
-                        <dd>
-                            <a href="#"><img src="http://p0.qhimg.com/t0145cc635c85e0cd67.jpg" width="100%"></a>
-                            <a href="">item name</a>
-                        </dd>
-                    </dl>
-                </dd>
-            </dl>
 
         </div>
-    </div>
+    </div><!--
 
-<script type="text/javascript" src="http://s7.qhimg.com/static/5a9fa72400ae3053/vendors.js" ></script><script type="text/javascript" src="http://s7.qhimg.com/static/3c3093dec666941f/index.js" ></script></body>
+<script src="http://s0.qhimg.com/!415dd799/jquery.js"></script>
+<script src="http://s2.qhimg.com/!39ea481e/react-with-addons.min.js"></script>
+<script src="http://s4.qhimg.com/!8c151852/react-dom.js"></script>
+-->
+
+
+
+<script src="http://s8.qhimg.com/static/b1a7ff9fbc2f5e7a/lib/jquery.js" ></script>
+<script src="http://s8.qhimg.com/static/b3169725889fa446/lib/react-with-addons.min.js" ></script>
+<script src="http://s6.qhimg.com/static/3e3d58e945a087c4/lib/react-dom.js" ></script>
+
+
+<script type="text/javascript" src="http://s6.qhimg.com/static/a964040de5781068/vendors.js" ></script><script type="text/javascript" src="http://s8.qhimg.com/static/341507ea8d045318/index.js" ></script></body>
 </html>
