--- a/src/index.html
+++ b/src/index.html
@@ -59,10 +59,17 @@
         </div>
     </div>
 
-<script src="../src-webpack/static/js/lib/jquery.js"></script>
-<script src="../src-webpack/static/js/lib/react-with-addons.min.js"></script>
-<script src="../src-webpack/static/js/lib/react-dom.js"></script>
+<!--
+
+<script src="//s0.qhimg.com/!415dd799/jquery.js"></script>
+<script src="//s2.qhimg.com/!39ea481e/react-with-addons.min.js"></script>
+<script src="//s4.qhimg.com/!8c151852/react-dom.js"></script>
+-->
+
+<script src="static/js/lib/jquery.js"></script>
+<script src="static/js/lib/react-with-addons.min.js"></script>
+<script src="static/js/lib/react-dom.js"></script>
 
 
-<script type="text/javascript" src="static/js/vendors.js?a583a19caa588fadbe61"></script><script type="text/javascript" src="static/js/index.js?a583a19caa588fadbe61"></script></body>
+<script type="text/javascript" src="static/js/vendors.js?357ebc09b00984103968"></script><script type="text/javascript" src="static/js/index.js?357ebc09b00984103968"></script></body>
 </html>
