--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset='UTF-8' />
     <title>docs for mv project</title>
-    <meta http-equiv="refresh" content="0; URL=./src/index.html">
+    <meta http-equiv="refresh" content="0; URL=./output/index.html">
 </head>
 <body>
     
