--- a/output/index.html
+++ b/output/index.html
@@ -5,9 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" type="text/css" href="//s.ssl.qhimg.com/static/f87da901feefef49/index.css" media="screen">
-
-
     <title>mv project</title>
+    <script>window.defaultConst = {
+        index: {
+            defaultImg: 'https://p3.ssl.qhimg.com/t01020ad04b3a4a6238.jpg'
+        }
+    };</script>
+
 </head>
 
 <body>
@@ -72,5 +76,5 @@
 <script src="//s.ssl.qhimg.com/static/3e3d58e945a087c4/lib/react-dom.js" ></script>
 
 
-<script type="text/javascript" src="//s.ssl.qhimg.com/static/b86685e27daa4e8e/vendors.js" ></script><script type="text/javascript" src="//s.ssl.qhimg.com/static/30eb6d302857423c/index.js" ></script></body>
+<script type="text/javascript" src="//s.ssl.qhimg.com/static/8c42ac001625ffa5/vendors.js" ></script><script type="text/javascript" src="//s.ssl.qhimg.com/static/30f8f5999b7cfe35/index.js" ></script></body>
 </html>
