--- a/src-webpack/view.html
+++ b/src-webpack/view.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="static/css/view.css" media="screen">
 
     <title>mv project</title>
+    <%= require( "html!./include/meta.html" ) %>
 </head>
 
 <body>
