--- a/src/view.html
+++ b/src/view.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" type="text/css" href="static/css/view.css" media="screen">
 
     <title>mv project</title>
+    <script>
+    window.defaultConst = {
+        index: {
+            defaultImg: 'https://p3.ssl.qhimg.com/t01020ad04b3a4a6238.jpg'
+        }
+    };
+</script>
+
 </head>
 
 <body>
@@ -27,5 +35,5 @@
         <div class="inner clearfix"></div>
     </div>
 
-<script type="text/javascript" src="static/js/vendors.js?a8fa8b85077886816865"></script><script type="text/javascript" src="static/js/view.js?a8fa8b85077886816865"></script></body>
+<script type="text/javascript" src="static/js/vendors.js?a291fc7ced718e352212"></script><script type="text/javascript" src="static/js/view.js?a291fc7ced718e352212"></script></body>
 </html>
