--- a/src-webpack/index.html
+++ b/src-webpack/index.html
@@ -5,9 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" type="text/css" href="static/css/index.css" media="screen">
-
-
     <title>mv project</title>
+    <%= require( "html!./include/meta.html" ) %>
 </head>
 
 <body>
