--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" type="text/css" href="static/css/index.css" media="screen">
-
-
     <title>mv project</title>
+    <script>
+    window.defaultConst = {
+        index: {
+            defaultImg: 'https://p3.ssl.qhimg.com/t01020ad04b3a4a6238.jpg'
+        }
+    };
+</script>
+
 </head>
 
 <body>
@@ -72,5 +78,5 @@
 <script src="static/js/lib/react-dom.js"></script>
 
 
-<script type="text/javascript" src="static/js/vendors.js?a8fa8b85077886816865"></script><script type="text/javascript" src="static/js/index.js?a8fa8b85077886816865"></script></body>
+<script type="text/javascript" src="static/js/vendors.js?a291fc7ced718e352212"></script><script type="text/javascript" src="static/js/index.js?a291fc7ced718e352212"></script></body>
 </html>
